# C_much_improvement

./: .gitignore  README.md
.github/: pull_request_template.md
.github/workflows/: ci_pipeline.yaml  template_unit_test.yaml
chapter01/: CMakeLists.txt
chapter01/ex_01/: CMakeLists.txt
chapter01/ex_01/src/: ex_01.c
chapter01/ex_02/: CMakeLists.txt
chapter01/ex_02/src/: ex_02.c  ex_02.h
chapter01/tests/: CMakeLists.txt  test_ex_01.c
dead_simple/: CMakeLists.txt
dead_simple/include/: fibonacci.h  pyramid.h
dead_simple/src/: fibonacci.c  pyramid.c
dead_simple/tests/: test_fibbonacci_result.c  test_pyramid.c
